Major Overhaul, added cycle 1 , integrated UI, Added DB drivers to deps, updated gradle for offline, fixed mac compiling